<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/myProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/my_profile" >
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/log_out"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings" />
</menu>