<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/startFragment">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.smailgourmi.holdmycalls.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats">
        <action
            android:id="@+id/action_navigation_chats_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_calls"
        android:name="com.smailgourmi.holdmycalls.ui.calls.CallsFragment"
        android:label="@string/title_calls"
        tools:layout="@layout/fragment_calls" >
        <action
            android:id="@+id/action_navigation_calls_to_callFragment"
            app:destination="@+id/callFragment"/>
    </fragment>
    <fragment
        android:id="@+id/callFragment"
        android:name="com.smailgourmi.holdmycalls.ui.call.CallFragment"
        android:label="Call"
        tools:layout="@layout/fragment_call">
        <action
            android:id="@+id/navigation_call_to_callsFragment"
            app:destination="@+id/navigation_calls"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_users"
        android:name="com.smailgourmi.holdmycalls.ui.contacts.ContactsFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_navigation_users_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.smailgourmi.holdmycalls.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.smailgourmi.holdmycalls.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_callFragment"
            app:destination="@id/callFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.smailgourmi.holdmycalls.ui.chat.ChatFragment"
        android:label="@string/title_chat" />
    <fragment
        android:id="@+id/startFragment"
        android:name="com.smailgourmi.holdmycalls.ui.start.StartFragment"
        android:label="Start">
        <action
            android:id="@+id/action_startFragment_to_createAccountFragment"
            app:destination="@id/createAccountFragment" />
        <action
            android:id="@+id/action_startFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_startFragment_to_navigation_chats"
            app:destination="@id/navigation_chats"
            app:launchSingleTop="true"
            app:popUpTo="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.smailgourmi.holdmycalls.ui.start.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_chats"
            app:destination="@id/navigation_chats"
            app:launchSingleTop="true"
            app:popUpTo="@id/startFragment" />
        <action
            android:id="@id/action_startFragment_to_createAccountFragment"
            app:destination="@id/createAccountFragment"/>
    </fragment>
    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.smailgourmi.holdmycalls.ui.start.createAccount.CreateAccountFragment"
        android:label="Create Account"
        tools:layout="@layout/fragment_create_account">
        <action
            android:id="@+id/action_createAccountFragment_to_navigation_chats"
            app:destination="@id/navigation_chats"
            app:launchSingleTop="true"
            app:popUpTo="@id/startFragment" />
    </fragment>
</navigation>