<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.smailgourmi.holdmycalls.ui.calls.CallsViewModel" />

        <variable
            name="userContact"
            type="com.smailgourmi.holdmycalls.data.db.entity.UserContact" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/chatCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="29dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/userProfileImage"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/user_image"
                android:scaleType="centerCrop"
                app:bind_image_url="@{userContact.profileImageUrl}"
                tools:src="@tools:sample/avatars[0]" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/contactInfo"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/chatCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/displayNameText"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:singleLine="true"
            android:text="@{userContact.displayName}"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/chatCardView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/chatCardView"
            tools:text="Display name" />

        <TextView
            android:id="@+id/requestText"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="7dp"
            android:text="@string/new_friend_request"

            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/chatCardView"
            app:layout_constraintLeft_toRightOf="@id/chatCardView" />
        </LinearLayout>
        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:onClick="@{() -> viewmodel.makeCallPressed(userContact)}"
            android:text="@string/call"
            android:gravity="center"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/lavender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableEnd="@drawable/ic_call_32"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
