<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.smailgourmi.holdmycalls.ui.start.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/textContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleText"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/login_to_your_account"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/lavender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="25"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:drawableStart="@drawable/ic_person_48"
                    android:drawablePadding="10dp"
                    android:textSize="20sp"
                    android:text="@={viewmodel.emailText}"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPasswordInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="0dp"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/ic_lock_48"
                    android:drawablePadding="10dp"
                    android:text="@={viewmodel.passwordText}"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:enabled="@{!viewmodel.isLoggingIn()}"
                android:gravity="center"
                android:onClick="@{() -> viewmodel.loginPressed()}"
                android:text="@string/login"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline50"
                tools:enabled="@{true}"
                android:layout_gravity="center" />

            <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="Forgot Password?"
                android:onClick="@{() -> viewmodel.fogotPWDPressed()}"
            android:textColor="@color/lavender"
            android:textSize="16sp" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="0dp"
                    android:layout_gravity="center"
                    android:text="Not yet registered?"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/signUpRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="0dp"
                    android:layout_gravity="center"
                    android:text="Sign Up"
                    android:onClick="@{() -> viewmodel.signUpPressed()}"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue_900"
                    android:textSize="18sp" />
            </GridLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".55" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>